--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-  <!-- <script src="/js/functions.js"></script> -->
-  <script src="/js/main.js" type="module"></script>
   <main>
 
     <!-- Фильтрация изображений от других пользователей -->
@@ -236,5 +234,14 @@
       </section>
     </template>
 
+    <!-- Экран загрузки изображения -->
+    <template id="messages">
+    <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
+    </template>
+
+    <!-- JS -->
+    <script src="/js/main.js" type="module"></script>
+    <script src="./vendor/pristine/pristine.min.js" type="text/javascript"></script>
+    <script src="./vendor/nouislider/nouislider.js"></script>
 </body>
 </html>
