--- a/index.html
+++ b/index.html
@@ -243,5 +243,6 @@
     <script src="/js/main.js" type="module"></script>
     <script src="./vendor/pristine/pristine.min.js" type="text/javascript"></script>
     <script src="./vendor/nouislider/nouislider.js"></script>
+    <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
 </body>
 </html>
